[tool.poetry]
name = "screenMeltDoom"
version = "0.1.0"
description = ""
authors = ["Arnaud Meuret <arnaud@meuret.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pyxel = "^1.6.9"
pytweening = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
